details back button align fixed

--- a/src/app/pages/contact-details-page/contact-details-page.component.scss
+++ b/src/app/pages/contact-details-page/contact-details-page.component.scss
@@ -15,6 +15,10 @@
       width: $btnwidth2;
       @include unified-button-style;
     }
+
+    .back-btn {
+      justify-self: end;
+    }
   
     .contact-preview {
       gap: $commonMarginPadding;
